# pdc

./: .gitignore  README.md  pyproject.toml
.nova/: Configuration.json
hippo/: __init__.py  download_datasets.py
hippo/utils/: __init__.py  logging.py  make_dataset_config.py
